[CDM][TPL_COMPOSITE][#1311] Fix the notices content overlap with the top menu

--- a/app/templates/composite/less/layout.less
+++ b/app/templates/composite/less/layout.less
@@ -31,8 +31,8 @@ body {
 	z-index: 9998;
 }
 
-main {
-	//position: relative;
+.hub-wrap > main {
+	position: relative;
 
 	// Top of the page background
 	.pageTop {
